Correcting image-text spacing in buttons.

--- a/styles/home.css
+++ b/styles/home.css
@@ -107,3 +107,9 @@ input, button, .button {
     right: 5.6rem;
 
 }
+
+/* Espaço entre imagem e texto nos buttons de home.html e create-pass.html */
+button > img,
+.button.outlined  > img {
+    padding-right: 0.9rem;
+}
